# aurora-stream-deck

./: LICENSE.MD  Makefile  README.MD
Plugin/: manifest.json
property-inspector/: index.html  sdpi.css
property-inspector/js/: action.js  main.js
property-inspector/js/actions/: intercomaccept.js  intercomcall.js  intercomreject.js  release.js  setalt.js  setspeed.js  setwp.js  transfertostation.js  zoomtonavaid.js
rust/: Cargo.toml
rust/src/: main.rs
rust/src/actions/: intercom_accept.rs  intercom_call.rs  intercom_reject.rs  mod.rs  release.rs  setalt.rs  setspeed.rs  setwp.rs  tranfer_to_position.rs  zoom_to_navaid.rs
