[package]
name = "Aurora-stream-deck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aurorastream"
path = "src/main.rs"



[dependencies]
serde_json = "1.0.91"
serde = "1.0.145"
aurora_api = { git = "https://github.com/AlvaroSierra/aurora-api", tag="V0.1.0", net.git-fetch-with-cli=true}
tokio = { version = "1.21.2", features = ["full"] }
stream_deck_sdk = { git = "https://github.com/fcannizzaro/stream-deck-rust-sdk" }
async-trait = "0.1.57"
