[package]
name = "Aurora-stream-deck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aurorastream"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde_json = "1.0.91"
serde = "1.0.145"
aurora_api = { git = "https://github.com/AlvaroSierra/aurora-api", tag="V0.2.2", net.git-fetch-with-cli=true}
tokio = { version = "1.21.2", features = ["full"] }
stream_deck_sdk = "1.0.6"
async-trait = "0.1.57"
